# tiago_behaviours

./: README.md
doc/: tiago_high_level.dot
tiago_behaviours_msgs/: CMakeLists.txt
tiago_behaviours_msgs/action/: BringGoods.action  MoveTo.action  QuestionLoad.action
tiago_kb/: CMakeLists.txt  package.xml
tiago_kb/launch/: knowledge_base.launch  test_knowledge_base.launch
tiago_kb/nodes/: knowledge_base  test_knowledge_base
tiago_kb/src/tiago_kb/: embedded_image.py  image_operations.py  places_xml.py  transforms.py
tiago_smach/: CMakeLists.txt  package.xml
tiago_smach/launch/: behaviours_server.launch  rico_task_harmonizer.launch  velma_task_harmonizer.launch
tiago_smach/nodes/: behaviours_server  bring_goods  bring_goods_server  bring_goods_tasker  call  get_jar_tasker  guide_human_tasker  human_fell_tasker  idle  idle_tasker  move_to  move_to_server  stop  task_harmonizer  test_bring_goods  test_move_to  test_wander  update_robot_pose  wander  wander_server
tiago_smach/src/tiago_smach/: bring_goods.py  bring_goods_tasker.py  conversation.py  dynamic_agent.py  dynamic_agent_tasker.py  get_jar.py  gh_csp.py  guide_human.py  human_fell.py  navigation.py  navigation_blocked.py  ros_node_utils.py  smach_rcprg.py  suspend_gh.py  task_manager.py  tiago_torso_controller.py  update_pose.py  wander.py
